--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,29 @@
-<div>
-  <img src="../../../assets/logos/logo-black.png" alt="Logo" />
+<div class="mx-6 flex w-full border-l-2 border-l-lightGray pr-12">
+  <img
+    src="../../../assets/logos/logo-black.png"
+    alt=""
+    class="object-contain py-4 pr-6"
+  />
+
+  <div class="flex w-full flex-col items-center border-x-2 border-lightGray">
+    <div class="flex w-full justify-end gap-x-10 px-8 py-2 text-lightGray">
+      <a href="" class="hover:text-primary">About us</a>
+      <a href="" class="hover:text-primary">Our Team</a>
+      <a href="" class="hover:text-primary">News</a>
+      <a href="" class="hover:text-primary">Contacts</a>
+    </div>
+
+    <div
+      class="grid w-full grid-cols-2 items-center border-t-2 border-lightGray"
+    >
+      <div class="flex justify-between border-r-2 border-lightGray px-4 py-4">
+        <button
+          class="rounded-full hover:bg-lightgray active:bg-lightGray/60 py-1 px-1"
+          [routerLink]=""
+        >
+          <img src="../../../assets/icons/search.svg" alt="" class="h-6 w-6" />
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
