--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,6 +17,7 @@
       class="grid w-full grid-cols-2 items-center border-t-2 border-lightGray"
     >
       <div class="flex justify-between border-r-2 border-lightGray px-4 py-4">
+        <input type="text" placeholder="Search" />
         <button
           class="rounded-full hover:bg-lightgray active:bg-lightGray/60 py-1 px-1"
           [routerLink]=""
