Front/Landing Page
Øverste seksjon av nettsiden

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="text-white bg-black">
-  <div class="flex justify-between mx-40 border-b-2 border-notGray py-8 my-4">
+  <div class="flex justify-between mx-40 border-b-2 border-notGray py-8 mb-4">
     <div class="flex items-center">
       <img src="../../../assets/logos/logo.png" alt="" class="h-14" />
     </div>
