--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="min-heigth: 100vh">
-  <app-navbar></app-navbar>
-  <router-outlet></router-outlet>
-</div>
+<app-navbar></app-navbar>
+<app-landing-page></app-landing-page>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
