--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <!-- Front -->
 <div class="flex items-center bg-primary text-white mx-6">
-  <div class="mx-auto">
+  <div class="ml-16">
     <div class="flex items-center mb-4">
       <div class="border-b-2 px-16 border-white"></div>
       <p class="ml-5 text-2xl">
@@ -17,12 +17,12 @@
 
 <!-- Black Bar -->
 <div
-  class="flex items-end justify-between mx-6 pt-4 bg-black text-white gap-x-20 px-20"
+  class="flex items-end justify-between pb-4 mx-6 pt-4 bg-black text-white gap-x-20 px-20"
 >
   <div class="max-w-5xl">
     <div class="flex gap-x-16">
       <p class="text-2xl font-semibold">Reliability</p>
-      <p class="text-2xl font-semibold">Performancen</p>
+      <p class="text-2xl font-semibold">Performance</p>
       <p class="text-2xl font-semibold">Innovation</p>
     </div>
     <p>
@@ -34,9 +34,64 @@
     </p>
   </div>
   <button
-    class="flex items-center justify-center border-2 border-white bg-gray p-5 h-fit"
+    class="flex items-center justify-center border-2 border-white bg-gray p-5 h-14"
   >
     <p class="text-2xl">Read More</p>
     <img src="../../../assets/icons/arrow-right.svg" alt="" class="m-2 h-6" />
   </button>
+</div>
+
+<!-- Storage -->
+<div class="grid grid-cols-2 items-center gap-x-10 mx-10 my-20">
+  <div class="flex flex-col ml-14">
+    <p class="mb-6 text-start text-3xl font-semibold">Storage</p>
+    <p class="mb-6 text-lg">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Faucibus turpis in eu
+      mi bibendum neque. Mattis ullamcorper velit sed ullamcorper morbi
+      tincidunt ornare massa eget. Pellentesque id nibh tortor id aliquet. A
+      diam sollicitudin tempor id eu nisl nunc mi ipsum.
+    </p>
+    <div class="flex gap-x-6">
+      <button
+        class="flex justify-center py-4 w-52 gap-x-3 border-2 border-black bg-black hover:bg-white text-white hover:text-black"
+      >
+        Baum UDS
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
+          />
+        </svg>
+      </button>
+      <button
+        class="flex justify-center py-4 w-52 gap-x-3 border-2 border-black bg-black hover:bg-white text-white hover:text-black"
+      >
+        Baum SWARM
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
+          />
+        </svg>
+      </button>
+    </div>
+  </div>
+  <img src="../../../assets/images/image1.png" alt="" />
 </div>
