--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -42,7 +42,7 @@
 </div>
 
 <!-- Storage -->
-<div class="grid grid-cols-2 items-center gap-x-10 mx-10 my-20">
+<div class="grid grid-cols-2 items-center gap-x-10 mx-6 my-20">
   <div class="flex flex-col ml-14">
     <p class="mb-6 text-start text-3xl font-semibold">Storage</p>
     <p class="mb-6 text-lg">
@@ -54,7 +54,7 @@
     </p>
     <div class="flex gap-x-6">
       <button
-        class="flex justify-center py-4 w-52 gap-x-3 border-2 border-black bg-black hover:bg-white text-white hover:text-black"
+        class="flex justify-center py-4 w-60 gap-x-3 border-2 border-black bg-black hover:bg-white text-white hover:text-black"
       >
         Baum UDS
         <svg
@@ -73,7 +73,7 @@
         </svg>
       </button>
       <button
-        class="flex justify-center py-4 w-52 gap-x-3 border-2 border-black bg-black hover:bg-white text-white hover:text-black"
+        class="flex justify-center py-4 w-60 gap-x-3 border-2 border-black bg-black hover:bg-white text-white hover:text-black"
       >
         Baum SWARM
         <svg
@@ -94,4 +94,109 @@
     </div>
   </div>
   <img src="../../../assets/images/image1.png" alt="" />
+</div>
+
+<!--  Cursed Intersections 1 -->
+
+<div class="flex mx-6 pr-4 bg-dark">
+  <div class="bg-cover bg-no-repeat img-crop2-img h-full w-3/4">
+    <div class="img-crop2-img-bg h-full"></div>
+  </div>
+  <div class="my-auto w-auto text-white">
+    <div class="mx-auto w-auto">
+      <div class="flex items-center mb-6">
+        <div class="h-0.5 mr-5 px-16 bg-lightGray"></div>
+        <p class="text-3xl">
+          We have been developing storage systems since 2010
+        </p>
+      </div>
+      <p class="mb-4 text-xl text-lightGray">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Faucibus turpis in
+        eu mi bibendum neque. Mattis ullamcorper velit sed ullamcorper morbi
+        tincidunt ornare massa eget. Pellentesque id nibh tortor id aliquet. A
+        diam sollicitudin tempor id eu nisl nunc mi ipsum.
+      </p>
+      <p class="flex justify-end items-center text-end text-lightGray">
+        Learn more
+        <img
+          src="../../../assets/icons/long-arrow-right.svg"
+          alt=""
+          class="ml-2 pr-4 h-10"
+        />
+      </p>
+    </div>
+  </div>
+</div>
+
+<!--  Cursed Intersections 2 -->
+
+<div class="mx-6 bg-[#5fb3f8]">
+  <div class="grid grid-cols-2 py-2 text-white">
+    <div class="flex flex-col bg-black px-20">
+      <div class="my-auto max-w-xl">
+        <p class="mb-10 w-full text-3xl font-semibold">Applied AI Platform</p>
+        <p class="mb-4 border-l-2 border-lightgray pl-10 text-lg font-thin">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod,
+          nisl nec tincidunt lacinia, nunc nisl aliquam massa, eget aliquet nisl
+          nisl sit amet mauris. Sed euismod, nisl nec tincidunt lacinia, massa,
+          eget aliquet nisl nisl sit amet mauris. Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. nec tincidunt lacinia,
+        </p>
+        <p class="flex items-center justify-end text-end text-lightgray">
+          Learn more
+          <img
+            src="../../../assets/icons/long-arrow-right.svg"
+            class="ml-2 h-10 w-10"
+            alt=""
+          />
+        </p>
+      </div>
+    </div>
+    <div class="py-8">
+      <div class="bg-image-ai-platform"></div>
+    </div>
+  </div>
+</div>
+
+<!--  Cursed Intersections 3 -->
+
+<div class="mx-6 mb-12 grid grid-cols-2 text-white">
+  <div class="bg-primary py-8">
+    <div class="bg-image-community"></div>
+  </div>
+
+  <div class="flex flex-col bg-gray px-20">
+    <div class="my-auto ml-auto max-w-xl">
+      <div class="mb-10 flex items-center">
+        <p class="text-3xl font-semibold">Community</p>
+        <div class="ml-5 h-[2px] bg-offGray px-16"></div>
+      </div>
+      <p class="mb-4 text-lg font-thin">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod,
+        nisl nec tincidunt lacinia, nunc nisl aliquam massa, eget aliquet nisl
+        nisl sit amet mauris. Sed euismod, nisl nec tincidunt lacinia, massa,
+        eget aliquet nisl nisl sit amet mauris. Lorem ipsum dolor sit amet,
+        consectetur adipiscing elit. nec tincidunt lacinia,
+      </p>
+      <div class="flex justify-end gap-x-16 font-semibold">
+        <p class="flex items-center justify-end text-end text-lightgray">
+          Learn more
+          <img
+            src="../../../assets/icons/long-arrow-right.svg"
+            class="ml-2 h-10 w-10"
+            alt=""
+          />
+        </p>
+        <p class="flex items-center justify-end text-end text-lightgray">
+          Learn more
+          <img
+            src="../../../assets/icons/long-arrow-right.svg"
+            class="ml-2 h-10 w-10"
+            alt=""
+          />
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
