--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -52,7 +52,7 @@
       tincidunt ornare massa eget. Pellentesque id nibh tortor id aliquet. A
       diam sollicitudin tempor id eu nisl nunc mi ipsum.
     </p>
-    <div class="flex gap-x-6">
+    <div class="flex gap-x-8">
       <button
         class="flex justify-center py-4 w-60 gap-x-3 border-2 border-black bg-black hover:bg-white text-white hover:text-black"
       >
@@ -93,7 +93,7 @@
       </button>
     </div>
   </div>
-  <img src="../../../assets/images/image1.png" alt="" />
+  <div class="bg-image-storage"></div>
 </div>
 
 <!--  Cursed Intersections 1 -->
@@ -198,5 +198,26 @@
         </p>
       </div>
     </div>
+  </div>
+</div>
+
+<!-- The Team -->
+<div class="mx-6 mb-20 border-[1px] border-lightGray">
+  <div class="py-10 px-20 mb-12 bg-notWhite">
+    <p class="font-semibold text-2xl mb-4">Our Team</p>
+    <p class="text-xl">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nisl
+      nec tincidunt lacinia, nunc nisl aliquam massa, eget aliquet nisl nisl sit
+      amet mauris. Sed euismod, nisl nec tincidunt lacinia, massa, eget aliquet
+      nisl nisl sit amet mauris. Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit. nec tincidunt lacinia,
+    </p>
+  </div>
+  <div class="mx-auto max-w-6xl">
+    <mat-tab-group>
+      <mat-tab label="Management"> <app-staff></app-staff></mat-tab>
+      <mat-tab label="Economy"> <app-staff></app-staff></mat-tab>
+      <mat-tab label="Sales"> <app-staff></app-staff></mat-tab>
+    </mat-tab-group>
   </div>
 </div>
