--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -275,3 +275,39 @@
   </div>
   <google-map [center]="center" [zoom]="12" width="100%"></google-map>
 </div>
+
+<div class="grid grid-cols-2 -space-x-12">
+  <div class="bg-image-contact flex items-center justify-center">
+    <p class="font-sofachrome text-7xl">BAUM AI</p>
+  </div>
+  <div class="flex flex-col bg-gray/80 px-20 py-10">
+    <p class="pb-12 text-3xl font-semibold text-white">
+      Got any questions? Contact Us!
+    </p>
+    <app-contact></app-contact>
+  </div>
+</div>
+
+<!-- Redirects seksjon -->
+
+<div class="mx-auto flex max-w-7xl justify-between py-10 text-2xl">
+  <div class="flex flex-col">
+    <button class="hover:text-primary">About Comaany</button>
+    <button class="hover:text-primary">Our Team</button>
+  </div>
+  <div class="flex flex-col">
+    <button class="hover:text-primary">News</button>
+    <button class="hover:text-primary">Contact</button>
+  </div>
+  <div class="flex flex-col">
+    <button class="hover:text-primary">Community</button>
+    <button class="hover:text-primary">Education</button>
+  </div>
+  <div class="flex flex-col">
+    <button class="hover:text-primary">BAUM SWARM</button>
+    <button class="hover:text-primary">BAUM UDS</button>
+  </div>
+  <div class="flex flex-col">
+    <button class="hover:text-primary">BAUM AI</button>
+  </div>
+</div>
