--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <!-- Front -->
 <div class="flex items-center bg-primary text-white mx-6">
-  <div class="ml-16">
+  <div class="mx-auto">
     <div class="flex items-center mb-4">
       <div class="border-b-2 px-16 border-white"></div>
       <p class="ml-5 text-2xl">
@@ -11,7 +11,7 @@
     <p class="text-2xl">{{ moscow }} - Moscow, Russia</p>
   </div>
   <div class="img-crop1-img h-full w-1/2 bg-cover bg-no-repeat">
-    <div class="img-crop1-img-bg h-full bg-dark"></div>
+    <div class="img-crop1-img-bg h-full bg-crop"></div>
   </div>
 </div>
 
@@ -224,8 +224,9 @@
 
 <!--  Video  -->
 
-<div class="flex items-center justify-center mb-6 pb-2">
+<div class="flex items-center justify-center w-screen mb-6 pb-2">
   <video
+    class="w-screen"
     controls
     src="../../../assets/videos/Elementor video placeholder.mp4"
     type="video/mp4"
